src/test/deca/context/valid/with_object/class_in_class.deca
class A {}
class B {
    A a = new A();
    A aa;
}