src/test/deca/context/invalid/with-object/unary_op_minus_class.deca
class A{
    int x;
}

{
    A a = new A();
    -a;
        }